# small-world-deluxe

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  CREDITS  INSTALL  LICENSE  License-Scanning.gitlab-ci.yml  README.md  SAST.gitlab-ci.yml  bootstrap.bat  bootstrap.sh  licenses-setup.sh  meson.build.abandoned  smallworld.supp  sudoers.sh
.PVS-Studio/: depend_info.json
.gitlab/: sast-ruleset.toml
Jobs/: SAST.gitlab-ci.yml
binaries/setup-wizard/nsis/: main.nsi
cmake/modules/: FindAria2.cmake  FindCares.cmake  FindCodec2.cmake  FindFFTW.cmake  FindFlac.cmake  FindGettext.cmake  FindGkQtPrivate.cmake  FindHamlib.cmake  FindHamlibCpp.cmake  FindHunspell.cmake  FindIcuuc.cmake  FindLZ4.cmake  FindLame.cmake  FindLevelDB.cmake  FindLibIntl.cmake  FindLibSsh2.cmake  FindMarble.cmake  FindNuspell.cmake  FindOgg.cmake  FindOggVorbis.cmake  FindOpus.cmake  FindOpusEnc.cmake  FindPAM.cmake  FindPortAudio.cmake  FindPortAudioCpp.cmake  FindQWT.cmake  FindQXmpp.cmake  FindQtSpell.cmake  FindQtUSB.cmake  FindQtUsb.cmake  FindSnappy.cmake  FindSndfile.cmake  FindSoapySDR.cmake  FindTaglib.cmake  FindUDev.cmake  FindUSB.cmake  FindUSBCompat.cmake  FindVorbis.cmake  FindZSTD.cmake  QXmpp-release.cmake  (+3 more)
docker/: README.md
docker/arch/: Dockerfile  README.md
docker/arch/latest/: Dockerfile  enable_multilib.sh
docker/arch/mingw/: Dockerfile
docker/arch/mingw-w64-hamlib/: PKGBUILD
docker/arch/mingw-w64-libusb-compat-0.1/: PKGBUILD
docker/arch/mingw-w64-texinfo/: PKGBUILD
docker/arch/smallworld/: Dockerfile
docker/contrib/: README.md
docker/fedora/: README.md
docker/fedora/rawhide/: Dockerfile
docker/linux/arch/: Dockerfile
docker/ubuntu/: README.md
docker/ubuntu/latest/: Dockerfile
docs/dialogs/: About.html  About.md
docs/wiki/Setup/: Compilation & Dependencies.md
lang/translations/: README.md
po/: README.md
src/: audio_devices.cpp  audio_devices.hpp  defines.hpp  dek_db.cpp  dek_db.hpp  file_io.cpp  file_io.hpp  gk_app_vers.hpp  gk_audio_decoding.cpp  gk_audio_decoding.hpp  gk_audio_encoding.cpp  gk_audio_encoding.hpp  gk_circ_buffer.hpp  gk_cli.cpp  gk_cli.hpp  gk_codec2.cpp  gk_codec2.hpp  gk_curve_gui.cpp  gk_curve_gui.hpp  gk_display_image.cpp  gk_display_image.hpp  gk_exception.cpp  gk_exception.hpp  gk_exceptions.cpp  gk_exceptions.hpp  gk_fft.cpp  gk_fft.hpp  gk_fft_audio.cpp  gk_fft_audio.hpp  gk_fft_audio_pcm_stream.cpp  gk_fft_audio_pcm_stream.hpp  gk_frequency_list.cpp  gk_frequency_list.hpp  gk_fyr_data.cpp  gk_fyr_data.hpp  gk_logger.cpp  gk_logger.hpp  gk_messagebox.hpp  gk_modem.cpp  gk_modem.hpp  (+69 more)
src/audio/decoding/: gk_codec2_source.cpp  gk_codec2_source.hpp  gk_flac_source.cpp  gk_flac_source.hpp  gk_ogg_opus_source.cpp  gk_ogg_opus_source.hpp  gk_ogg_vorbis_source.cpp  gk_ogg_vorbis_source.hpp  gk_pcm_wav_source.cpp  gk_pcm_wav_source.hpp
src/audio/encoding/: gk_codec2_sink.cpp  gk_codec2_sink.hpp  gk_flac_sink.cpp  gk_flac_sink.hpp  gk_ogg_opus_sink.cpp  gk_ogg_opus_sink.hpp  gk_ogg_vorbis_sink.cpp  gk_ogg_vorbis_sink.hpp  gk_pcm_wav_sink.cpp  gk_pcm_wav_sink.hpp
src/contrib/AudioFile/: CMakeLists.txt
src/contrib/hamlib++/: ampclass.cc  rigclass.cc  rotclass.cc
src/contrib/kissfft/: _kiss_fft_guts.h  kiss_fft.c
src/contrib/portaudio/cpp/: CMakeLists.txt  CMakeLists.txt.unused  README.md  README.md.unused
src/contrib/portaudio/cpp/cmake/modules/: FindPortAudio.cmake
src/contrib/portaudio/cpp/example/: devs.cxx  sine.cxx
src/contrib/portaudio/cpp/include/portaudiocpp/: AutoSystem.hxx  BlockingStream.hxx  CFunCallbackStream.hxx  CallbackInterface.hxx  CallbackStream.hxx  CppFunCallbackStream.hxx  Device.hxx  DirectionSpecificStreamParameters.hxx  Exception.hxx  HostApi.hxx  InterfaceCallbackStream.hxx  MemFunCallbackStream.hxx  PortAudioCpp.hxx  SampleDataFormat.hxx  Stream.hxx  StreamParameters.hxx  System.hxx  SystemDeviceIterator.hxx  SystemHostApiIterator.hxx
src/contrib/portaudio/cpp/src/: AsioDeviceAdapter.cxx  BlockingStream.cxx  CFunCallbackStream.cxx  CallbackInterface.cxx  CallbackStream.cxx  CppFunCallbackStream.cxx  Device.cxx  DirectionSpecificStreamParameters.cxx  Exception.cxx  HostApi.cxx  InterfaceCallbackStream.cxx  MemFunCallbackStream.cxx  Stream.cxx  StreamParameters.cxx  System.cxx  SystemDeviceIterator.cxx  SystemHostApiIterator.cxx
src/contrib/udev/: device.cpp  enumerate.cpp  enumerate.hpp  monitor.cpp  monitor.hpp  udev.cpp
src/models/spelling/: gk_text_edit_spelling_highlight.cpp  gk_text_edit_spelling_highlight.hpp
src/models/splash/: gk_splash_disp_model.cpp  gk_splash_disp_model.hpp
src/models/system/: gk_network_ping_model.cpp  gk_network_ping_model.hpp
src/models/tableview/: gk_active_msgs_model.cpp  gk_active_msgs_model.hpp  gk_callsign_msgs_model.cpp  gk_callsign_msgs_model.hpp  gk_frequency_model.cpp  gk_frequency_model.hpp  gk_logger_model.cpp  gk_logger_model.hpp  gk_qdatetime_filter_proxy_model.cpp  gk_qdatetime_filter_proxy_model.hpp  gk_settings_dlg_sdr_devices.cpp  gk_settings_dlg_sdr_devices.hpp  gk_solar_weather_forecast_model.cpp  gk_solar_weather_forecast_model.hpp  gk_xmpp_recv_msgs_model.cpp  gk_xmpp_recv_msgs_model.hpp  gk_xmpp_roster_blocked_model.cpp  gk_xmpp_roster_blocked_model.hpp  (+6 more)
src/ui/: aboutdialog.cpp  aboutdialog.hpp  aboutdialog.ui  dialogsettings.cpp  dialogsettings.hpp  dialogsettings.ui  gk_vu_meter_widget.cpp  gk_vu_meter_widget.hpp  gkatlasdialog.cpp  gkatlasdialog.hpp  gkatlasdialog.ui  gkaudioplaydialog.cpp  gkaudioplaydialog.hpp  gkaudioplaydialog.ui  gkintrosetupwizard.cpp  gkintrosetupwizard.hpp  gkintrosetupwizard.ui  gkupdateinfodialog.cpp  gkupdateinfodialog.hpp  gkupdateinfodialog.ui  gkxmpprosterdialog.cpp  gkxmpprosterdialog.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  sendreportdialog.cpp  sendreportdialog.hpp  sendreportdialog.ui  spectrodialog.cpp  spectrodialog.hpp  spectrodialog.ui
src/update/: gk_auto_update.cpp  gk_auto_update.hpp  gk_check_update.cpp  gk_check_update.hpp  gk_network.cpp  gk_network.hpp  main.cpp
toolchains/: x86_64-w64-mingw32_linux.cmake
(+136 files in other folders)
